--- a/MidiOrchestrator/MidiOrchestrator.csproj
+++ b/MidiOrchestrator/MidiOrchestrator.csproj
@@ -98,7 +98,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MidiClock.cs" />
+    <Compile Include="MidiSequencer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrackControl.xaml.cs">
       <DependentUpon>TrackControl.xaml</DependentUpon>
